mlflow/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: kubeflow-user-example-com
  labels:
    app: mlflow
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow
    app.kubernetes.io/version: "3.7.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
      app.kubernetes.io/name: mlflow
      app.kubernetes.io/instance: mlflow
  template:
    metadata:
      labels:
        app: mlflow
        app.kubernetes.io/name: mlflow
        app.kubernetes.io/instance: mlflow
    spec:
      serviceAccountName: mlflow
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mlflow
          image: burakince/mlflow:3.7.0
          imagePullPolicy: IfNotPresent
          command:
            - "mlflow"
          args:
            - "server"
            - "--host=0.0.0.0"
            - "--port=5000"
            - "--backend-store-uri=sqlite:///:memory:"
            - "--default-artifact-root=./mlruns"
            - "--gunicorn-opts=--log-level=info"
          ports:
            - name: mlflow
              containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: mlflow
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: mlflow
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 5
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            privileged: false
            capabilities:
              drop:
                - ALL
